--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-animated-numbers": "^0.18.0",
     "react-dom": "^18",
     "react-icons": "^5.2.0",
     "sass": "^1.76.0",
